--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "portal-noticias",
+  "name": "y",
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
@@ -43,5 +43,8 @@
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0"
   },
-  "private": true
+  "private": true,
+  "description": "This is an [Expo](https://expo.dev) project created with [`create-expo-app`](https://www.npmjs.com/package/create-expo-app).",
+  "author": "",
+  "license": "ISC"
 }
